<resources>
    <string name="app_name">ChatDemo</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_icon">Cancel icon</string>
    <string name="connected_to_chat">Connected to chat</string>
    <string name="custom_live_stream">Custom live stream</string>
    <string name="delete_icon">Delete icon</string>
    <string name="delete_message">Delete message</string>
    <string name="description_settings">Settings</string>
    <string name="error">error</string>
    <string name="error_authentication">Failed to get authentication token</string>
    <string name="error_connection_failed">Connection to chat service failed</string>
    <string name="error_delete_all_messages_failed">Deleting all messages failed</string>
    <string name="error_delete_message">Failed to delete message</string>
    <string name="error_invalid_message">Invalid message data received</string>
    <string name="error_kick">There was problem while kicking user</string>
    <string name="error_send_failed">Failed to send message</string>
    <string name="error_template">Error: %1$s</string>
    <string name="error_unknown">Unknown error</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="hint_send_a_message">Send a message</string>
    <string name="https">https://</string>
    <string name="introduce_yourself">Introduce yourself</string>
    <string name="kick_icon">Kick icon</string>
    <string name="kick_user">Kick user</string>
    <string name="kicked_message">Disconnected from chat: Kicked by moderator</string>
    <string name="log_out">Log out</string>
    <string name="message_deleted">Message deleted</string>
    <string name="moderation">Moderation</string>
    <string name="not_set">Not set</string>
    <string name="playback_url">Playback URL</string>
    <string name="playback_url_error">Not a valid Playback URL</string>
    <string name="save">Save</string>
    <string name="select_avatar">Select avatar</string>
    <string name="start_chatting">Start chatting</string>
    <string name="stickers">Stickers</string>
    <string name="success">success</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="use_custom_stream">Use your own custom Amazon IVS stream in this demo</string>
    <string name="user_kicked">User kicked</string>
    <string name="your_name">Your name</string>
    <string name="bullet_chat_mode">Bullet chat mode</string>
    <string name="use_bullet_chat">When enabled, messages will float across the screen as "bullet chat" messages.</string>
</resources>
