<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_pill_black"
    android:padding="@dimen/padding_normal">

    <TextView
        android:id="@+id/introduce_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/introduce_yourself"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/introduce_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/your_name"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduce_title" />

    <TextView
        android:id="@+id/introduce_avatar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/select_avatar"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduce_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/introduce_avatars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduce_avatar_title"
        app:spanCount="6"
        tools:itemCount="6"
        tools:listitem="@layout/row_avatar_item" />

    <TextView
        android:id="@+id/grant_permission_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/grant_permissions"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduce_avatars" />

    <TextView
        android:id="@+id/moderation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moderation"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/moderation_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/moderation_switch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/moderation_switch"
        style="@style/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grant_permission_title" />

    <TextView
        android:id="@+id/chat_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/bg_button_stateful"
        android:enabled="false"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/start_chatting"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moderation_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>
