<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextureView
            android:id="@+id/surface_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/stream_buffering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/input_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:stackFromEnd="true"
            tools:listitem="@layout/row_chat_message_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/chat_button"
                style="@style/TextStyleButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/main_button_height"
                android:layout_margin="@dimen/margin_normal"
                android:background="@drawable/bg_button_yellow"
                android:elevation="@dimen/elevation_normal"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/tap_to_chat"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/input_holder"
                android:layout_width="0dp"
                android:layout_height="@dimen/main_button_height"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="@drawable/bg_pill"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/chat_button"
                app:layout_constraintEnd_toStartOf="@id/input_send"
                app:layout_constraintStart_toStartOf="@id/chat_button">

                <ImageView
                    android:id="@+id/input_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/margin_normal"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/input_text"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:hint="@string/hint_send_a_message"
                    android:imeOptions="actionGo"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/input_file"
                    app:layout_constraintStart_toEndOf="@id/input_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/input_file"
                    android:layout_width="@dimen/main_button_height"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_margin="@dimen/margin_normal"
                    android:background="@drawable/bg_round_ripple"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_file"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/input_send"
                android:layout_width="@dimen/main_button_height"
                android:layout_height="@dimen/main_button_height"
                android:layout_margin="@dimen/margin_normal"
                android:background="@drawable/bg_button_round"
                android:contentDescription="@null"
                android:padding="12dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_send"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/main_button_height"
            android:layout_height="@dimen/main_button_height"
            android:background="@drawable/bg_round_ripple"
            android:contentDescription="@string/description_settings"
            android:padding="12dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/sticker_layout"
        layout="@layout/view_sticker_layout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/success_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:visibility="gone"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/margin_medium"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/margin_medium">

            <ImageView
                android:id="@+id/success_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/success"
                android:textAllCaps="true"
                android:textColor="@color/success_notification_title_color"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/success_icon"
                app:layout_constraintTop_toTopOf="@id/success_icon" />

            <TextView
                android:id="@+id/success_popup_text"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/success_icon"
                app:layout_constraintTop_toBottomOf="@id/success_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/error_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:visibility="gone"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/margin_medium"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/margin_medium">

            <ImageView
                android:id="@+id/error_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_warning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/error"
                android:textAllCaps="true"
                android:textColor="@color/success_notification_title_color"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/error_icon"
                app:layout_constraintTop_toTopOf="@id/error_icon" />

            <TextView
                android:id="@+id/error_description"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/kicked_message"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/error_icon"
                app:layout_constraintTop_toBottomOf="@id/error_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moderator_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/moderate_message_background_color"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/moderator_message_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_normal"
            app:layout_constraintBottom_toTopOf="@id/moderator_button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.65">

            <include
                android:id="@+id/moderate_message_item"
                layout="@layout/row_chat_message_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <include
                android:id="@+id/moderate_sticker_item"
                layout="@layout/row_chat_sticker_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/moderator_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/delete_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_square_ripple"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:contentDescription="@string/delete_icon"
                    android:padding="@dimen/padding_medium"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:id="@+id/delete_message_button"
                    style="@style/TextStyleButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal"
                    android:text="@string/delete_message"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/kick_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_square_ripple"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_kick_user"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:contentDescription="@string/kick_icon"
                    android:padding="@dimen/padding_medium"
                    android:src="@drawable/ic_kick_user" />

                <TextView
                    android:id="@+id/kick_user_button"
                    style="@style/TextStyleButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal"
                    android:text="@string/kick_user"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancel_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_square_ripple"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:contentDescription="@string/cancel_icon"
                    android:padding="@dimen/padding_medium"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/cancel_button"
                    style="@style/TextStyleButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/main_button_height"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
